fix factor table on mobiles

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -197,6 +197,7 @@ body .pc .em{font-weight:bold;text-align:center;padding:1em 5%;background-color:
 
 #factorAdd .cbox{margin-bottom:10px;padding:0.5em}
 #factorAdd .tbl{margin:0}
+
 /*final price*/
 .priceBox{font-size:1.4em;margin:0 auto 10px;padding:0;border-radius:0.25rem;background-color:#5bbbdb;color:#eee;text-align:center;max-width:400px;min-width:170px;transition:0.3s}
 .priceBox h3{font-size:1em;padding:1em;margin:0}
@@ -230,9 +231,9 @@ kbd{font-family:monospace;}
 .tbl.productList tr td:nth-child(1){font-size: 0.8em;}
 .tbl.productList tr td:nth-child(2){font-size: 0.9em;}
 .tbl.productList .product{white-space:nowrap;min-width:250px;}
-.tbl.productList input.count{white-space:nowrap;width:100px;padding:5px 0.5em;}
+.tbl.productList input.count{white-space:nowrap;width:100px;padding:5px 0.5em;text-align:center;}
 
-.tbl.productList .input.discountCn{width:120px;}
+.tbl.productList .input.discountCn{width:120px;margin:0 auto;}
 .tbl.productList .input.discountCn input.discount{padding:5px 0.5em;text-align:center;}
 .tbl.productList .input.discountCn .addon.small{min-width:40px;max-width:45px;text-align:center;transition:0.3s;opacity:1}
 .tbl.productList .input.discountCn .addon.small:empty{min-width:0;width:0;opacity:0;border-width:none;padding:0}
@@ -301,6 +302,12 @@ kbd{font-family:monospace;}
   .tbl .min100{width:auto;}
   .tbl .min120{width:auto;}
   .tbl .min150{width:auto;}
+
+  #factorAdd .tbl tr td:first-child, #factorAdd .tbl tr th:first-child{display: none;}
+  #factorAdd .tbl tr td:last-child, #factorAdd .tbl tr th:last-child{display: none;}
+  #factorAdd .tbl.productList input.count{width:50px;}
+  #factorAdd .tbl.productList .input.discountCn{width:60px;}
+  #factorAdd .tbl.productList .input.discountCn .addon.small{display:none!important}
 }
 
 
